fix: contrast issue against dark mode links

--- a/src/components/article/ArticleCard.astro
+++ b/src/components/article/ArticleCard.astro
@@ -25,7 +25,7 @@ const href = `/article/${article.id}`;
     <div class="card-content">
       <h2 class="title">{article.data.title}</h2>
       <ArticleMetadata article={article} showDescription={true} />
-      <span class="read-more">Read more →</span>
+      <span class="read-more">Read more</span>
     </div>
   </a>
 </article>
